# openai-rs

./: Cargo.toml  Readme.md
src/: chat.rs  lib.rs  main.rs  openai.rs
