[package]
name = "openai_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
